--- a/ShoppingApplication/src/app/product/product.component.html
+++ b/ShoppingApplication/src/app/product/product.component.html
@@ -1,19 +1,6 @@
 <div class="container">
-<h1>Product Page</h1>
-<table class="table table-bordered">
-  <thead>
-    <tr class="active">
-      <th>ID</th>
-      <th>NAME</th>
-      <th>PRICE</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr *ngFor= 'let product of products'>
-      <td>{{product.id}}</td>
-      <td>{{product.name}}</td>
-      <td>{{product.price}}</td>
-    </tr>
-  </tbody>
-</table>
+  <h1>Product Page</h1>
+  <!--CHILD COMPONENT -->
+  <app-product-list [productList]='products' (isVisible)='receiveFromChild($event)' (message)='messageFromChild($event)'></app-product-list>
+  {{message}}
 </div>
