--- a/ShoppingApplication/src/app/product/product.component.html
+++ b/ShoppingApplication/src/app/product/product.component.html
@@ -1,5 +1,20 @@
 <div class="container">
   <h1>Product Page</h1>
+  <p>JSON FORMAT - {{product|json}} </p>
+  <form (submit)= 'addProduct()' novalidate>
+    <div class="form-group">
+      <input type="number" [(ngModel)]= 'product.id' class="form-control" name="prodId" placeholder="Product Id">
+    </div>
+    <div class="form-group">
+      <input type="text" [(ngModel)]= 'product.name' class="form-control" name="prodName" placeholder="Product Name">
+    </div>
+    <div class="form-group">
+      <input type="text" [(ngModel)]= 'product.price' class="form-control" name="prodPrice" placeholder="Product Price">
+    </div>
+  
+    <button type="submit" class="btn btn-primary">Add Product</button>
+  </form>
+  
   <!--CHILD COMPONENT -->
   <app-product-list (isVisible)='receiveFromChild($event)' (message)='messageFromChild($event)'></app-product-list>
   {{message}}
