--- a/ShoppingApplication/src/app/app.component.html
+++ b/ShoppingApplication/src/app/app.component.html
@@ -5,4 +5,6 @@
   <hr>
   <button type="button" (click)='addProduct()' class="btn btn-primary">Add Product</button>
   <app-product></app-product>
+  <hr>
+  <app-customer></app-customer>
 </div>
