--- a/ShoppingApplication/src/app/product/product.component.html
+++ b/ShoppingApplication/src/app/product/product.component.html
@@ -1,20 +1,29 @@
 <div class="container">
   <h1>Product Page</h1>
-  <p>JSON FORMAT - {{product|json}} </p>
-  <form (submit)= 'addProduct()' novalidate>
+  <p>JSON FORMAT - {{product|json}} {{productForm.invalid | json}} </p>
+  <p>{{productForm.valid | json}}</p>
+  <form #productForm='ngForm' (submit)='addProduct()' novalidate>
     <div class="form-group">
-      <input type="number" [(ngModel)]= 'product.id' class="form-control" name="prodId" placeholder="Product Id">
+      <input type="number" required [(ngModel)]='product.id' class="form-control" name="prodId" placeholder="Product Id" #pid='ngModel'>
+      <div>
+        {{pid.invalid | json}}
+        {{pid.valid | json}}
+        {{pid.value | json}}
+        {{pid.errors | json}}
+        {{pid.pristine | json}}
+        {{pid.dirty | json}}
+      </div>
     </div>
     <div class="form-group">
-      <input type="text" [(ngModel)]= 'product.name' class="form-control" name="prodName" placeholder="Product Name">
+      <input type="text" required minlength="3" maxlength="10" [(ngModel)]='product.name' class="form-control" name="prodName" placeholder="Product Name">
     </div>
     <div class="form-group">
-      <input type="text" [(ngModel)]= 'product.price' class="form-control" name="prodPrice" placeholder="Product Price">
+      <input type="text" required [(ngModel)]='product.price' class="form-control" name="prodPrice" placeholder="Product Price">
     </div>
-  
-    <button type="submit" class="btn btn-primary">Add Product</button>
+
+    <button [disabled]='productForm.invalid' type="submit" class="btn btn-primary">Add Product</button>
   </form>
-  
+
   <!--CHILD COMPONENT -->
   <app-product-list (isVisible)='receiveFromChild($event)' (message)='messageFromChild($event)'></app-product-list>
   {{message}}
