--- a/ShoppingApplication/src/app/customer/customer.component.html
+++ b/ShoppingApplication/src/app/customer/customer.component.html
@@ -1,7 +1,15 @@
 <h1>{{customerForm.value | json}}</h1>
-<form [formGroup]='customerForm'>
+<form [formGroup]='customerForm' (submit)='addCustomer()' novalidate>
   <div class="form-group">
     <input class='form-control' type='text' formControlName='name' placeholder="Customer Name" name="custName">
+    <div>
+          {{customerForm.get('name').valid}}
+          {{customerForm.get('name').invalid}}
+          {{customerForm.get('name').value}}
+          {{customerForm.get('name').error | json}}
+          {{customerForm.get('name').pristine}}
+          {{customerForm.get('name').dirty}}
+      </div>
   </div>
   <div class="form-group">
     <input class='form-control' type='date' formControlName='dob' placeholder="Date of Birth" name="custDob">
@@ -49,6 +57,8 @@
         </div>
       </div>
     </div>
-
+  </div>
+  <div class="form-group">
+    <button type="submit" [disabled]='customerForm.invalid' class="btn btn-primary">Submit</button>
   </div>
 </form>
